# KRAIT

./: .gitignore  README.md
backend/: .gitignore  app.py  env.example  pyproject.toml  requirements.txt  run.py
backend/app/: config.py  main.py  models.py
backend/app/critic/: __init__.py  analyzer.py  critic_models.py  llm_analysis.py
backend/app/critic/analysis/: __init__.py  flop_calculator.py  memory_analyzer.py  tiling_detector.py  vectorization_checker.py
backend/app/critic/checks/: __init__.py  bounds_checker.py  memory_safety.py  performance_checker.py  synchronization_checker.py  type_safety.py
backend/app/critic/parsers/: __init__.py  base_parser.py  cuda_parser.py  opencl_parser.py  parser_factory.py  triton_parser.py
backend/app/critic/suggestions/: __init__.py  code_patcher.py  hardware_optimizer.py  severity_classifier.py  suggestion_generator.py
backend/app/llm/: gemini_client.py  huggingface_client.py
backend/app/routers/: chat.py  critic.py  gpu_executor.py  health.py  kernel.py
backend/app/services/: github_executor.py
backend/app/utils/: system_prompt.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AppShell.tsx  ChatNew.tsx  CriticPanel.tsx  KernelWorkbench.tsx  Layout.tsx  MarkdownRenderer.tsx  MetricsDashboard.tsx  MetricsTable.tsx  PerformanceChart.tsx  Sidebar.tsx  TopNavigation.tsx
frontend/utils/: parseMDX.ts
gpu-executor/: README.md  SETUP.md  executor.ipynb  requirements.txt
gpu-executor/kernels/: compile_1758259723.cu  (+232 more)
(+129 files in other folders)
